No longer use deprecated Java constructions
git-svn-id: https://svn.code.sf.net/p/writer2latex/code/branches/w2x-stable1.7@438 f0f2a975-2e09-46c8-9428-3b39399b9f3c